Fixed alignment issues with the massageboxes in chat page

--- a/styles/chatStyle.css
+++ b/styles/chatStyle.css
@@ -30,18 +30,18 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     border-radius: 10px;
     padding: 20px;
-    position: relative;
     margin-top: 20px;
     min-width: 60%;
     width: max-content;
     padding: 0px, 0px;
+    position: relative;
 }
 .client-m{
-    left: 10%;
+    float: left;
 }
 
 .user-m{
-    left: 30%;
+    float: right;
 }
 .button{
     background-color: Transparent;
